fix(style): add margin-top to confirmaiton signin
* match margin-botton for form input on Sign Up page
* margins will overlap leave same amount - 6px

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ button {
     height: 35px;
     width: 90px;
     justify-self: end;
+    margin-top: 6px;
 }
 
 .bolder {
